--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="vi">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,6 +9,7 @@
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
 </head>
+
 <body>
     <!-- Top Header -->
     <div class="top-header">
@@ -107,7 +109,8 @@
                     Du lịch Châu Á - Khám phá Mỹ, Úc, Âu <br> Đi nơi đâu bạn muốn
                 </h1>
                 <p class="inner-desc">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                    et dolore magna aliqua
                 </p>
                 <form action="" class="inner-form">
                     <div class="inner-box inner-address">
@@ -140,5 +143,182 @@
         </div>
     </div>
     <!-- End-Section-1 -->
+
+    <!-- Section-2 -->
+    <div class="section-2">
+        <div class="container">
+            <div class="inner-wrap">
+                <div class="inner-info">
+                    <h2 class="inner-title">ƯU ĐÃI 2024 <br> TOUR GIỜ CHÓT</h2>
+                    <div class="inner-desc">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                    </div>
+                    <div class="inner-clock-title">Kết thúc sau</div>
+                    <div class="inner-clock-number">
+                        <span>12</span>
+                        <span>20</span>
+                        <span>30</span>
+                    </div>
+                    <div class="inner-discount-title">
+                        GIẢM ĐẾN
+                    </div>
+                    <div class="inner-discount-price">
+                        990.000<span class="inner-unit">đ</spa>
+                    </div>
+                </div>
+                <div class="inner-list">
+                    <!-- Product item -->
+                    <div class="product-item">
+                        <div class="inner-image">
+                            <a href="#">
+                                <img src="assets/images/product-1.jpg" alt="">
+                            </a>
+                        </div>
+                        <div class="inner-discount">
+                            <i class="fa-solid fa-bolt"></i>Giảm -30%
+                        </div>
+                        <div class="inner-content">
+                            <h3 class="inner-title">
+                                <a href="#">
+                                    Hà Nội – Lào Cai – SaPa 4N3Đ
+                                </a>
+                            </h3>
+                            <div class="inner-prices">
+                                <div class="inner-price-old">
+                                    13.650.000<span class="inner-unit">đ</span>
+                                </div>
+                                <div class="inner-price-new">
+                                    2.590.000<span class="inner-unit">đ</span>
+                                </div>
+                            </div>
+                            <div class="inner-desc">
+                                <div class="inner-desc-tour">Mã Tour: <b>123456789</b></div>
+                                <div class="inner-desc-tour">Ngày Khởi Hành: <b>22/07/2024</b></div>
+                                <div class="inner-desc-tour">Thời Gian: <b>10 Ngày 9 Đêm</b></div>
+                            </div>
+                            <div class="inner-meta">
+                                <div class="inner-rating">
+                                    <div class="inner-stars">
+                                        <i class="fa-solid fa-star"></i>
+                                        <i class="fa-solid fa-star"></i>
+                                        <i class="fa-solid fa-star"></i>
+                                        <i class="fa-solid fa-star"></i>
+                                        <i class="fa-regular fa-star"></i>
+                                    </div>
+                                    <div class="inner-nummber">(5)</div>
+                                </div>
+                                <div class="inner-stock">
+                                    <div class="inner-label">Số chỗ còn:</div>
+                                    <div class="inner-number">10</div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="product-item">
+                        <div class="inner-image">
+                            <a href="#">
+                                <img src="assets/images/product-2.jpg" alt="">
+                            </a>
+                        </div>
+                        <div class="inner-discount">
+                            <i class="fa-solid fa-bolt"></i>Giảm -30%
+                        </div>
+                        <div class="inner-content">
+                            <h3 class="inner-title">
+                                <a href="#">
+                                    Hà Nội – Lào Cai – SaPa 4N3Đ
+                                </a>
+                            </h3>
+                            <div class="inner-prices">
+                                <div class="inner-price-old">
+                                    13.650.000<span class="inner-unit">đ</span>
+                                </div>
+                                <div class="inner-price-new">
+                                    2.590.000<span class="inner-unit">đ</span>
+                                </div>
+                            </div>
+                            <div class="inner-desc">
+                                <div class="inner-desc-tour">Mã Tour: <b>123456789</b></div>
+                                <div class="inner-desc-tour">Ngày Khởi Hành: <b>22/07/2024</b></div>
+                                <div class="inner-desc-tour">Thời Gian: <b>10 Ngày 9 Đêm</b></div>
+                            </div>
+                            <div class="inner-meta">
+                                <div class="inner-rating">
+                                    <div class="inner-stars">
+                                        <i class="fa-solid fa-star"></i>
+                                        <i class="fa-solid fa-star"></i>
+                                        <i class="fa-solid fa-star"></i>
+                                        <i class="fa-solid fa-star"></i>
+                                        <i class="fa-regular fa-star"></i>
+                                    </div>
+                                    <div class="inner-nummber">(5)</div>
+                                </div>
+                                <div class="inner-stock">
+                                    <div class="inner-label">Số chỗ còn:</div>
+                                    <div class="inner-number">10</div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="product-item">
+                        <div class="inner-image">
+                            <a href="#">
+                                <img src="assets/images/product-3.jpg" alt="">
+                            </a>
+                        </div>
+                        <div class="inner-discount">
+                            <i class="fa-solid fa-bolt"></i>Giảm -30%
+                        </div>
+                        <div class="inner-content">
+                            <h3 class="inner-title">
+                                <a href="#">
+                                    Hà Nội – Lào Cai – SaPa 4N3Đ
+                                </a>
+                            </h3>
+                            <div class="inner-prices">
+                                <div class="inner-price-old">
+                                    13.650.000<span class="inner-unit">đ</span>
+                                </div>
+                                <div class="inner-price-new">
+                                    2.590.000<span class="inner-unit">đ</span>
+                                </div>
+                            </div>
+                            <div class="inner-desc">
+                                <div class="inner-desc-tour">Mã Tour: <b>123456789</b></div>
+                                <div class="inner-desc-tour">Ngày Khởi Hành: <b>22/07/2024</b></div>
+                                <div class="inner-desc-tour">Thời Gian: <b>10 Ngày 9 Đêm</b></div>
+                            </div>
+                            <div class="inner-meta">
+                                <div class="inner-rating">
+                                    <div class="inner-stars">
+                                        <i class="fa-solid fa-star"></i>
+                                        <i class="fa-solid fa-star"></i>
+                                        <i class="fa-solid fa-star"></i>
+                                        <i class="fa-solid fa-star"></i>
+                                        <i class="fa-regular fa-star"></i>
+                                    </div>
+                                    <div class="inner-nummber">(5)</div>
+                                </div>
+                                <div class="inner-stock">
+                                    <div class="inner-label">Số chỗ còn:</div>
+                                    <div class="inner-number">10</div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- Product item -->
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- End-Section-2 -->
+
+    <!-- Section-3 -->
+    <div class="section-3">
+        .i
+    </div>
+
+    <!-- End-Section-3 -->
 </body>
+
 </html>
