--- a/index.html
+++ b/index.html
@@ -1159,7 +1159,10 @@
                                 Top 5 điểm check in độc đáo tại Singapore
                             </h3>
                             <div class="inner-desc">
-                                Nếu bạn nghĩ du lịch Singapore rất nhàm chán vì chỉ mãi quanh quẩn trong những khối bê tông vô cảm thì bạn “chắc chưa?”. Tuy đảo quốc Sư Tử không phải là một quốc gia rộng lớn nhưng các địa điểm du lịch tại Singapore chưa từng đánh mất sức hút đối với cộng đồng xê dịch quốc tế.
+                                Nếu bạn nghĩ du lịch Singapore rất nhàm chán vì chỉ mãi quanh quẩn trong những khối bê
+                                tông vô cảm thì bạn “chắc chưa?”. Tuy đảo quốc Sư Tử không phải là một quốc gia rộng lớn
+                                nhưng các địa điểm du lịch tại Singapore chưa từng đánh mất sức hút đối với cộng đồng xê
+                                dịch quốc tế.
                             </div>
                         </div>
                     </a>
@@ -1214,6 +1217,66 @@
     </div>
     <!-- Section 7-->
 
+    <!-- Footer -->
+    <footer class="footer">
+        <div class="container">
+            <div class="inner-top">
+                <h2 class="inner-title">Đăng ký ngay để không bỏ lỡ các chương trình của chúng tôi</h2>
+                <form action="" class="inner-form">
+                    <input type="text" placeholder="Nhập email của bạn...">
+                    <button>Đăng ký ngay</button>
+                </form>
+            </div>
+            <div class="inner-middle">
+                <nav class="inner-links">
+                    <ul>
+                        <li><a href="#">Trang Chủ</a></li>
+                        <li><a href="#">Tour Trong Nước</a></li>
+                        <li><a href="#">Tour Nước Ngoài</a></li>
+                        <li><a href="#">Tin Tức</a></li>
+                        <li><a href="#">Liên Hệ</a></li>
+                    </ul>
+                </nav>
+                <nav class="inner-socials">
+                    <ul>
+                        <li>
+                            <a href="#" target="_blank">
+                                <i class="fa-brands fa-facebook"></i>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#" target="_blank">
+                                <i class="fa-brands fa-x-twitter"></i>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#" target="_blank">
+                                <i class="fa-brands fa-instagram"></i>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#" target="_blank">
+                                <i class="fa-brands fa-youtube"></i>
+                            </a>
+                        </li>
+                    </ul>
+                </nav>
+            </div>
+            <div class="inner-bottom">
+                <div class="inner-copyright">© 2024 28Tech. All rights reserved.</div>
+                <div class="inner-logo">
+                    <a href="index.html"><img src="assets/images/Logo.png" alt=""></a>
+                </div>
+                <nav class="inner-bottom-links">
+                    <ul>
+                        <li><a href="#">Điều khoản dịch vụ</a></li>
+                        <li><a href="#">Chính sách bảo mật</a></li>
+                    </ul>
+                </nav>
+            </div>
+        </div>
+    </footer>
+    <!-- Footer -->
 
 
 </body>
