--- a/index.html
+++ b/index.html
@@ -1278,7 +1278,16 @@
     </footer>
     <!-- Footer -->
 
-
+    <!-- Box contact -->
+    <nav class="box-contact">
+        <ul>
+            <li><a href="" target="_blank"><i class="fa-brands fa-facebook"></i></a></li>
+            <li><a href="" target="_blank"><i class="fa-brands fa-instagram"></i></a></li>
+            <li><a href="" target="_blank"><i class="fa-brands fa-x-twitter"></i></a></li>
+            <li><a href="" target="_blank"><i class="fa-brands fa-youtube"></i></a></li>
+        </ul>
+    </nav>
+    <!-- Box contact -->
 </body>
 
 </html>
