--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                             <a href="#" class="active">Trang chủ</a>
                         </li>
                         <li>
-                            <a href="#">Tour Trong Nước</a>
+                            <a href="danh-sach-tour.html">Tour Trong Nước</a>
                             <i class="fa-solid fa-caret-down"></i>
                             <ul>
                                 <li>
@@ -65,7 +65,7 @@
                             </ul>
                         </li>
                         <li>
-                            <a href="#">Tour Nước Ngoài</a>
+                            <a href="danh-sach-tour.html">Tour Nước Ngoài</a>
                             <i class="fa-solid fa-caret-down"></i>
                             <ul>
                                 <li>
